--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -15,29 +15,23 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets//css/global.css" />
-    <link rel="stylesheet" href="./assets//css/pokedex.css">
+    <link rel="stylesheet" href="./assets//css/pokedex.css" />
 
     <title>Pokedex</title>
   </head>
   <body>
     <section class="content">
       <h1>Pokedex</h1>
-      <ol class="pokemons">
-        <li class="pokemon"> 
-          <span class="number">#001</span>
-          <span class="name">Bulbasaur</span>
-          <div class="detail">
-            <ol class="types">
-              <li class="type">grass</li>
-              <li class="type">poison</li>
-            </ol>
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-              alt=""
-            />
-          </div>
-        </li>
+      <ol id="pokemonList" class="pokemons">
+        <!-- Pokemons -->
       </ol>
+      <div class="pagination">
+        <button id="loadMore" type="button">Load More</button>
+      </div>
     </section>
+    <script src="/assets/js/pokemon-model.js"></script>
+    <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
+''
